...
              <>
                <ModalTitle>Post a Match</ModalTitle>
                <Subtitle>{ladder.name}</Subtitle>

                <Label style={{ marginLeft: 5 }}>Court</Label>
                <CourtSelector
                  testID="add-ladder-match-court-selector"
                  onPress={() => setShowSearchCourtModal(true)}
                >
                  <CourtSelectorText selected={!!selectedCourt}>
                    {selectedCourt?.courtName || "Select Court"}
                  </CourtSelectorText>
                  <AntDesign name="right" size={16} color="#888" />
...
